--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Serial</title>
+  <meta http-equiv="origin-trial" content="AmrmfeJnyzm7XmD64eIeAuCdH0/Flc/xzZb0e6S5xShMWCrIlB2oRWiV+q4KEDYMFT/Lp2u6UFK+zkGdYlwdUAEAAABreyJvcmlnaW4iOiJodHRwczovL3VuamF2YXNjcmlwdGVyLXdlYi1zZXJpYWwtZXhhbXBsZS5nbGl0Y2gubWU6NDQzIiwiZmVhdHVyZSI6IlNlcmlhbCIsImV4cGlyeSI6MTU5MDA3NzQxM30=">
   <style>
     .repo-link {
       position: fixed;
