chore: improve demo UI

--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Serial</title>
   <meta http-equiv="origin-trial" content="AiM0rMslVx2jumsJjQ144QeZTScNmGVMYzBuXoaMQwCd7UHWbQH8Rg20adCN7XWaTMai4HvsUIyx3+blPPiupwEAAABreyJvcmlnaW4iOiJodHRwczovL3VuamF2YXNjcmlwdGVyLXdlYi1zZXJpYWwtZXhhbXBsZS5nbGl0Y2gubWU6NDQzIiwiZmVhdHVyZSI6IlNlcmlhbCIsImV4cGlyeSI6MTU5Njk3OTA1NX0=">
-  <style>
-    .repo-link {
-      position: fixed;
-      top: 0;
-      right: 0;
-      margin: 0 1rem 1rem 0;
-    }
-  </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,100&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
-  <button id="connect-to-serial">Connect to serial port</button>
-  <button id="get-serial-messages">Get serial messages</button>
-
-  <div>
-    <form id="message-form">
-      <input type="text" id="message-input" disabled="true" autocomplete="off">
-      <button type="submit" id="submit-button" disabled="true">Send</button>
-    </form>
-  </div>
-
-  <ol id="serial-messages-container"></ol>
+  <main>
+    <div class="repo-link">
+      <a href="https://github.com/UnJavaScripter/web-serial-example">GitHub Repo</a>
+    </div>
+    <section class="elements">
+      <div class="element">
+        <h2>Connect to a serial port</h2>
+        <button id="connect-to-serial">Connect</button>
+      </div>
+      <div class="element">
+        <h2>Send a message</h2>
+        <button class="message-button" data-value="0" disabled="true">Off</button>
+        <button class="message-button" data-value="1" disabled="true">On</button>
+      </div>
+      <div class="element">
+        <h2>Get a message back:</h2>
+        <ol id="serial-messages-container"></ol>
+      </div>
+    </section>
+  </main>
   
-  <div class="repo-link">
-    <a href="https://github.com/UnJavaScripter/web-serial-example">GitHub Repo</a>
-  </div>
-
   <script src="./dist/serial-handler.js" type="module"></script>
   <script src="./dist/app.js" type="module"></script>
 </body>
