chore: add link to demo
chore: add initial step to instructions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </div>
     <section class="elements">
       <div class="element">
+        <h3>Upload <a href="https://github.com/UnJavaScripter/web-serial-example/blob/master/web_serial_onboard_led.ino">the example code</a> to an Arduino</h3>
+      </div>
+      <div class="element">
         <h2>Connect to a serial port</h2>
         <button id="connect-to-serial">Connect</button>
       </div>
